--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </section>
 
     <!-- ABOUT ME -->
-    <h1 data-aos="fade-down-right" data-aos-delay="20" class="aboutH">About Me</h1>
-    <section id="me" class="about" data-aos="fade-down-right" >
+    <h1 data-aos="fade-in" class="aboutH">About Me</h1>
+    <section id="me" class="about" data-aos="fade-in">
       <figure>
         <div class=about_img-cont>
           <img class="about__bio-image" src="/assets/profile-pic-professional.jpg" alt="">
@@ -89,7 +89,7 @@
       </div>
     </section>
     <!-- PROJECTS -->
-    <section data-aos="fade-up-left" id="work" class="projects">
+    <section data-aos="fade-in" id="work" class="projects">
       <h1>My Projects</h1>
       <div data-aos="fade-in" class="slideshow-container">
         <div class="mySlides fade">
@@ -187,79 +187,78 @@
     </section>
 
     <!-- SKILLS -->
-    <section data-aos="fade-down-right" id="stack" class="skills">
+    <section data-aos="fade-in"  id="stack" class="skills">
       <h1>Skills</h1>
       <div class="skills__items">
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="fab fa-js-square"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-python-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up"  class="skills__item">
+        <div class="skills__item">
           <i class="devicon-html5-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-css3-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-react-original-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="fab fa-node"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item big">
+        <div class="skills__item big">
           <i class="devicon-express-original-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="fab fa-npm"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item bigger">
+        <div class="skills__item bigger">
           <i class="devicon-webpack-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up"  class="skills__item small" style="background-color:rgb(232, 236, 240); border-radius:10%">
+        <div class="skills__item small" style="background-color:rgb(232, 236, 240); border-radius:10%">
           <img src="/assets/flask.svg" alt="">
         </div>
-        <div data-aos="flip-up" class="skills__item">
-          <i  class="fab fa-sass"></i>
+        <div class="skills__item">
+          <i class="fab fa-sass"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item big">
+        <div class="skills__item big">
           <i class="devicon-mongodb-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-postgresql-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-babel-plain"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-git-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-github-original-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item xtra">
+        <div class="skills__item xtra">
           <i class="devicon-visualstudio-plain-wordmark"></i>
         </div>
-        <div data-aos="flip-up" class="skills__item">
+        <div class="skills__item">
           <i class="devicon-heroku-original-wordmark"></i>
         </div>
-        <div  data-aos="flip-up" class="skills__item small" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
+        <div class="skills__item small" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
           <img src="/assets/rest-api.png" alt="">
         </div>
       </div>
     </section>
     <!-- CONTACT -->
-    <section data-aos="fade-up-left" id="connect" class=" contact">
+    <section  data-aos="fade-in"  id="connect" class=" contact">
       <h2>
         Get in touch...</h2>
-      <div class="contact__list" >
+      <div class="contact__list">
         <a href="https://www.linkedin.com/in/csilla-barna/" target="_blank">
-          <i data-aos="zoom-in" data-aos-delay="50" class="fab fa-linkedin fa-2x"></i>
+          <i  data-aos="zoom-in" data-aos-delay="50" class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="mailto:barnacsilla89@gmail.com" target="_blank">
-          <i data-aos="zoom-in"     data-aos-delay="250"
-          class="far fa-envelope xtra"></i>
+          <i data-aos="zoom-in" data-aos-delay="450" class="far fa-envelope xtra"></i>
         </a>
       </div>
     </section>
@@ -284,8 +283,8 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset:300,
-      duration:1200
+      offset:400,
+      duration:1000
     }
     );
   </script>
