--- a/index.html
+++ b/index.html
@@ -75,15 +75,17 @@
       </figure>
       <div class="about__bio ">
         <p>
-          I have always been deeply curious about how the world works and what makes things tick! It was this curiosity,
-          paired with an analytical mindset and persistence which led me to pivot my career to programming.
-          My experience working in hospitality environments required efficient team collaboration, proactivity and
-          performing under pressure, could also help my transition into software development. A great inspiration for me
-          to discover and create something which can help make people's lives easier.
-          As a creative, collaborative thinker with a desire to learn -
-          I would enjoy working in an agile development environment; where I can bring my own ideas; able to work across
-          a wide variety of tasks to further develop my knowledge; in a team that has the freedom and responsibility to
-          make decisions.
+          I have always been deeply curious about how the world works and what makes
+          things tick! It was this curiosity, paired with an analytical mindset and 
+          persistence, which led me to pivot my career to programming. My experience 
+          working in hospitality environments required efficient team collaboration,
+          proactivity and performing under pressure, which will help my transition 
+          into software development. I am inspired and motivated to discover and create
+          things that can help make people's lives easier. As a creative, collaborative 
+          thinker with a desire to learn - I would enjoy working in an agile development 
+          environment where I can bring my own ideas and work across a wide variety of tasks
+          to further develop my knowledge, as part of a team that has the freedom and 
+          responsibility to make decisions.
 
         </p>
       </div>
