--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
           persistence, which led me to pivot my career to programming. My experience 
           working in hospitality environments required efficient team collaboration,
           proactivity and performing under pressure, which will help my transition 
-          into software development. I am inspired and motivated to discover and create
-          things that can help make people's lives easier. As a creative, collaborative 
-          thinker with a desire to learn - I would enjoy working in an agile development 
+          into software development.
+         <span>  </span> As a creative, collaborative thinker with a desire to learn - I would enjoy working in an agile development 
           environment where I can bring my own ideas and work across a wide variety of tasks
           to further develop my knowledge, as part of a team that has the freedom and 
           responsibility to make decisions.
-
+          <span>   </span>I am inspired and motivated to discover and create
+        things that can help make people's lives easier. If I am not working on my coding skills, you can find me in the kitchen cooking or out running for some charitable cause. 
         </p>
       </div>
     </section>
