project section clean

--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
       <div class="about__bio ">
         <p>
           I have always been deeply curious about how the world works and what makes
-          things tick! It was this curiosity, paired with an analytical mindset and 
-          persistence, which led me to pivot my career to programming. My experience 
+          things tick! It was this curiosity, paired with an analytical mindset and
+          persistence, which led me to pivot my career to programming. My experience
           working in hospitality environments required efficient team collaboration,
-          proactivity and performing under pressure, which will help my transition 
+          proactivity and performing under pressure, which will help my transition
           into software development.
-         <span>  </span> As a creative, collaborative thinker with a desire to learn - I would enjoy working in an agile development 
+          <span> </span> As a creative, collaborative thinker with a desire to learn - I would enjoy working in an agile
+          development
           environment where I can bring my own ideas and work across a wide variety of tasks
-          to further develop my knowledge, as part of a team that has the freedom and 
+          to further develop my knowledge, as part of a team that has the freedom and
           responsibility to make decisions.
-          <span>   </span>I am inspired and motivated to discover and create
-        things that can help make people's lives easier. If I am not working on my coding skills, you can find me in the kitchen cooking or out running for some charitable cause. 
+          <span> </span>I am inspired and motivated to discover and create
+          things that can help make people's lives easier. If I am not working on my coding skills, you can find me in
+          the kitchen cooking or out running for some charitable cause.
         </p>
       </div>
     </section>
@@ -95,8 +97,11 @@
       <h1>My Projects</h1>
       <div data-aos="fade-in" class="slideshow-container">
         <div class="mySlides fade">
-          <img src="/assets/heritage.gif" style="width:100%">
           <h3>Know your Heritage</h3>
+          <img src="/assets/heritage.gif" style="width:100%">
+          <h5>1/4</h5>
+          <hr>
+          <br>
           <div class="projects_description">
             <p> Stack: <strong>Python, Flask, PostgreSQL, ReactJS, Bulma </strong></p>
             <p>Duration - 7 days; duo project</p>
@@ -116,8 +121,11 @@
           </div>
         </div>
         <div class="mySlides fade">
-          <img src="/assets/devMap.gif" style="width:100%">
           <h3>dev.map</h3>
+          <img src="/assets/devMap.gif" style="width:100%">
+          <h5>2/4</h5>
+          <hr>
+          <br>
           <div class="projects_description">
             <p>Stack: <strong> MERN - MongoDB, Express, React, Node.js</strong></p>
             <p>Duration - 8 days; group of 3</p>
@@ -138,8 +146,11 @@
           </div>
         </div>
         <div class="mySlides fade">
-          <img src="/assets/movieSearch.gif" style="width:100%">
           <h3>Movie Search</h3>
+          <img src="/assets/movieSearch.gif" style="width:100%">
+          <h5>3/4</h5>
+          <hr>
+          <br>
           <div class="projects_description">
             <p>Stack: <strong>React.js, Bulma, REST API </strong> </p>
             <p>Duration - 2 days; duo project </p>
@@ -158,8 +169,11 @@
           </div>
         </div>
         <div class="mySlides fade">
-          <img src="/assets/partyPop.gif" style="width:100%">
           <h3>partyPOP</h3>
+          <img src="/assets/partyPop.gif" style="width:100%">
+          <h5>4/4</h5>
+          <hr>
+          <br>
           <div class="projects_description">
             <p>Stack: <strong> HTML, CSS, vanilla JavaScript </strong></p>
             <p>Duration - 7 days; solo project;</p>
@@ -189,7 +203,7 @@
     </section>
 
     <!-- SKILLS -->
-    <section data-aos="fade-in"  id="stack" class="skills">
+    <section data-aos="fade-in" id="stack" class="skills">
       <h1>Skills</h1>
       <div class="skills__items">
         <div class="skills__item">
@@ -252,12 +266,12 @@
       </div>
     </section>
     <!-- CONTACT -->
-    <section  data-aos="fade-in"  id="connect" class=" contact">
+    <section data-aos="fade-in" id="connect" class=" contact">
       <h2>
         Get in touch...</h2>
       <div class="contact__list">
         <a href="https://www.linkedin.com/in/csilla-barna/" target="_blank">
-          <i  data-aos="zoom-in" data-aos-delay="50" class="fab fa-linkedin fa-2x"></i>
+          <i data-aos="zoom-in" data-aos-delay="50" class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="mailto:barnacsilla89@gmail.com" target="_blank">
           <i data-aos="zoom-in" data-aos-delay="450" class="far fa-envelope xtra"></i>
@@ -285,7 +299,7 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      duration:800
+      duration: 800
     }
     );
   </script>
