--- a/index.html
+++ b/index.html
@@ -262,7 +262,11 @@
         </div>
         <div class="skills__item small" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
           <img src="/assets/rest-api.png" alt="">
+        </div>      
+        <div class="skills__item">
+          <i class="devicon-mocha-plain"></i>
         </div>
+              
       </div>
     </section>
     <!-- CONTACT -->
