--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -61,8 +63,9 @@
       <hr>
       <br>
       <h2>
-        Junior Software Developer
+        Junior Software Developer in London
       </h2>
+      <div class="stamp">OPEN TO WORK</div>
     </section>
 
     <!-- ABOUT ME -->
@@ -262,11 +265,11 @@
         </div>
         <div class="skills__item small" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
           <img src="/assets/rest-api.png" alt="">
-        </div>      
+        </div>
         <div class="skills__item">
           <i class="devicon-mocha-plain"></i>
         </div>
-              
+
       </div>
     </section>
     <!-- CONTACT -->
