open to work - mobile

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         Junior Software Developer in London
       </h2>
       <br>
+      <div class="stamp-cont">
       <div class="stamp">OPEN TO WORK</div>
+      </div>
     </section>
 
     <!-- ABOUT ME -->
