--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="about__bio ">
         <p>
           I am a recent Software Engineer Immersive Program graduate looking to launch my career 
-          in a fast-paced corporate environment as a junior software developer.
+          in a fast-paced corporate space as a junior software developer.
           My experience
           working in hospitality environments required efficient team collaboration,
           proactivity and performing under pressure, which will help my transition
