--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           <div class="projects_description">
             <p> Stack: <strong>Python, Flask, PostgreSQL, ReactJS, Bulma </strong></p>
             <p>Duration - 7 days; duo project</p>
-            Full-stack Python app which showcases UNESCO's world heritage list. The user is able to comment on sites and
-            add their favourites to the wish list. I was working on the site and user controller. Since we worked with a
-            relational database I added the comments as a “one to many” relationship. Finished up on the site component
-            with the fully working wish list and displayed it on the front end. Deployed on Heroku.
-            </p>
+           <p>Full-stack app built with a relational database which showcases UNESCO's world
+              heritage sites.I was working on the site and user controllers.
+               Finished up on the main component with the fully working wish list
+                and I also added the email verification. Deployed on Heroku.
+           </p>
           </div>
           <div class="projects__btns">
             <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn" target="_blank">
