--- a/index.html
+++ b/index.html
@@ -82,21 +82,20 @@
       </figure>
       <div class="about__bio ">
         <p>
-          I am a recent Software Engineer Immersive Program graduate looking to launch my career
-          in a fast-paced corporate space as a junior software developer.
-          My experience
-          working in hospitality environments required efficient team collaboration,
-          proactivity and performing under pressure, which will help my transition
-          into software development.
-          <span> </span> As a creative, collaborative thinker with a relentless drive to succeed
-          - I would enjoy working in an agile development
-          environment where I can bring my own ideas and work across a wide variety of tasks
-          to further develop my knowledge, as part of a team that has the freedom and
-          responsibility to make decisions.
-          <span> </span>I am inspired and motivated to discover and create
-          things that can help make people's lives easier.
-          If I am not working on my coding skills, you can find me in
-          the kitchen cooking or out running 🏃‍♀️ for some charitable cause.
+          I am inspired and motivated to discover and create
+          things that can help make people's lives easier. Making the impossible possible philosophy is in my blood.
+          I am always looking at ways to achieve more. In 2018 I decided to pursue my long lasting dream and became
+          a Software Engineer. I spent my free time teaching myself how to code,
+          mostly relied on online courses (Stanford Online, Coursera) and joined several coding groups.
+          I steadily built my foundation towards the Software Engineering Immersive Program that I participated in at the end of last year.
+          My persistence and determination led me to pivot my career to programming.
+          <span></span> I love to be a part of 
+          the coding communities, you can never get bored among like minded people.
+          I am excited about the upcoming meetups and helping others feel the same warm welcome like
+          I did in the beginning of my journey. If I am not improving my programming skills 👩‍💻 you can
+          find me in the kitchen baking or out 🏃‍♀️ running for some charitable cause.
+
+
         </p>
       </div>
     </section>
