--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="about__bio ">
         <p>
           I am inspired and motivated to discover and create
-          things that can help make people's lives easier. Making the impossible possible philosophy is in my blood.
+          projects that can make people's life easier.
           I am always looking at ways to achieve more. In 2018 I decided to pursue my long lasting dream and became
           a Software Engineer. I spent my free time teaching myself how to code,
           mostly relied on online courses (Stanford Online, Coursera) and joined several coding groups.
