--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
               heritage sites. I was working on the site and user controllers.
               Finished up on the main component with the fully working wish list
               and I also added the email verification. Deployed on Heroku.
+              Currently this app is being refurbished -  back online soon :)
             </p>
           </div>
           <div class="projects__btns">
-            <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn" target="_blank">
+            <!-- <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn" target="_blank">
               <i class="fas fa-eye"></i>
-            </a>
+            </a> -->
             <a href="https://github.com/csillabarna/project-4" class="projects_btn" target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
