--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         Junior Software Developer in London
       </h2>
       <br>
-      <div class="stamp-cont">
+      <!-- <div class="stamp-cont">
         <div class="stamp">OPEN TO WORK</div>
-      </div>
+      </div> -->
 
     </section>
 
@@ -87,9 +87,10 @@
           I am always looking at ways to achieve more. In 2018 I decided to pursue my long lasting dream and became
           a Software Engineer. I spent my free time teaching myself how to code,
           mostly relied on online courses (Stanford Online, Coursera) and joined several coding groups.
-          I steadily built my foundation towards the Software Engineering Immersive Program that I participated in at the end of last year.
+          I steadily built my foundation towards the Software Engineering Immersive Program that I participated in at
+          the end of last year.
           My persistence and determination led me to pivot my career to programming.
-          <span></span> I love to be a part of 
+          <span></span> I love to be a part of
           the coding communities, you can never get bored among like minded people.
           I am excited about the upcoming meetups and helping others feel the same warm welcome like
           I did in the beginning of my journey. If I am not improving my programming skills 👩‍💻 you can
@@ -116,7 +117,7 @@
               heritage sites. I was working on the site and user controllers.
               Finished up on the main component with the fully working wish list
               and I also added the email verification. Deployed on Heroku.
-              Currently this app is being refurbished -  back online soon :)
+              Currently this app is being refurbished - back online soon :)
             </p>
           </div>
           <div class="projects__btns">
